--- a/bootstrap04/css/mainSH.css
+++ b/bootstrap04/css/mainSH.css
@@ -3,13 +3,13 @@
 /* Base */
 
 html {
-  font-family: "Ropa Sans", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  /*  font-family: "Ropa Sans", sans-serif;*/
+  /*  font-size: 16px;*/
+  /*  line-height: 1.5;*/
 }
 body {
-  background-color: rgb(240, 240, 240);
-  color: rgb(0, 0, 0);
+  /*  background-color: rgb(240, 240, 240);*/
+  /*  color: rgb(0, 0, 0);*/
   /*  min-width: 960px;*/
   /*  padding-top: 240px;*/
 }
